WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217619
Fix wheel event region overlay painting
https://bugs.webkit.org/show_bug.cgi?id=217619
Summary
Fix wheel event region overlay painting
Simon Fraser (smfr)
Reported
2020-10-12 10:48:34 PDT
Fix wheel event region overlay painting
Attachments
Patch
(4.01 KB, patch)
2020-10-12 10:50 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-10-12 10:50:58 PDT
Created
attachment 411130
[details]
Patch
EWS
Comment 2
2020-10-12 13:12:46 PDT
Committed
r268366
: <
https://trac.webkit.org/changeset/268366
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 411130
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-10-12 13:13:19 PDT
<
rdar://problem/70220452
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug