Fix wheel event region overlay painting https://bugs.webkit.org/show_bug.cgi?id=217619

Reviewed by Antti Koivisto.

TWo changes related to wheel event region overlay painting.

First, the painted debug regions were misplaced inside overflow:scroll, because
RenderLayerBacking::paintDebugOverlays() used contentOffsetInCompositingLayer() rather than
graphicsLayer->offsetFromRenderer() - the scrolled contents layer can have a different
offsetFromRenderer to the other GraphicsLayers for a given RenderLayerBacking.

Second, with ENABLE(WHEEL_EVENT_REGIONS) we paint the wheel event regions in
RenderLayerBacking::paintDebugOverlays() so MouseWheelRegionOverlay should not also paint
the old ones.

* page/DebugPageOverlays.cpp:
(WebCore::MouseWheelRegionOverlay::updateRegion):
* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::paintDebugOverlays):


Canonical link: https://commits.webkit.org/230375@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268366 268f45cc-cd09-0410-ab3c-d52691b4dbfc